--- a/package.json
+++ b/package.json
@@ -13,11 +13,8 @@
   "license": "MIT",
   "dependencies": {
     "bindings": "^1.5.0",
-    "geographiclib": "^1.50.0",
     "mocha": "^7.0.1",
-    "node-addon-api": "^2.0.0",
-    "pg": "^7.18.2",
-    "proj4": "^2.6.0"
+    "node-addon-api": "^2.0.0"
   },
   "gypfile": true
 }
